<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="24dp">
    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:layout_gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:src="@drawable/ic_calc"
        android:contentDescription="@string/ic_calc_desc" />
    <EditText
        android:id="@+id/et_input1"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/input1_title"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="0"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/rg_operation"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation='horizontal'>

        <RadioButton
            android:id="@+id/rb_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_add_label"
            android:layout_marginEnd="10dp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rb_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/rb_sub_label" />

        <RadioButton
            android:id="@+id/rb_mlt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/rb_mlt_label" />

        <RadioButton
            android:id="@+id/rb_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/rb_div_label" />

    </RadioGroup>
    <EditText
        android:id="@+id/et_input2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/input2_title"
        android:autofillHints="0"
        android:inputType="number" />
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btn_count"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="#000"
        android:text="@string/btn_count_label"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tv_result_label"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="Hasil"
        android:textSize="20dp"
        android:layout_marginBottom="1dp"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="0"
        android:textSize="42dp"/>
</LinearLayout>